--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/books-svgrepo-com.svg" />
   <link href="/src/App.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Booknie</title>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="grid grid-cols-12 grid-rows-[1fr_10fr_1fr] h-screen"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
